# aws-generativeai-partner-samples

databricks/solutions/agentic-ai/multi-agent-app-agentcore2databricks/: .env.example  .gitignore  README.md  SPEC.md  pyproject.toml  requirements.txt
databricks/solutions/agentic-ai/multi-agent-app-agentcore2databricks/agentcore/: main.py
databricks/solutions/agentic-ai/multi-agent-app-agentcore2databricks/agentcore/agents/: supervisor.py  synthesizer.py
databricks/solutions/agentic-ai/multi-agent-app-agentcore2databricks/agentcore/config/: guardrails.py  settings.py
databricks/solutions/agentic-ai/multi-agent-app-agentcore2databricks/agentcore/gateway/: targets.py
databricks/solutions/agentic-ai/multi-agent-app-agentcore2databricks/agentcore/models/: responses.py  subtask.py
databricks/solutions/agentic-ai/multi-agent-app-agentcore2databricks/data/: generate_synthetic.py  uc_functions.sql
databricks/solutions/agentic-ai/multi-agent-app-agentcore2databricks/databricks_agents/: deploy_agents.py
databricks/solutions/agentic-ai/multi-agent-app-agentcore2databricks/docs/: agent-architecture-explained.md  blog-post.md  databricks-setup-guide.md  demo-script.md  knowledge-base.md  lessons-learned.md  strands-sdk-comparison.md
databricks/solutions/agentic-ai/multi-agent-app-agentcore2databricks/tests/: test_agents.py  test_connectivity.py  test_guardrails.py
databricks/solutions/agentic-ai/multi-agent-app-agentcore2databricks/ui/: README.md  package-lock.json  package.json
databricks/solutions/agentic-ai/multi-agent-app-agentcore2databricks/ui/src/: App.js  (+1 more)
(+73 files in other folders)
