[project]
name = "agentcore-finserv-analyst"
version = "0.1.0"
description = "Hybrid Multi-Agent Business Analyst — Bedrock AgentCore + Databricks Agent Framework"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.35.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "databricks-sdk>=0.40.0",
    "databricks-sql-connector>=3.0.0",
    "databricks-mcp>=0.1.0",
    "mlflow>=3.1.0",
    "databricks-agents>=1.0.0",
    "faker>=28.0",
    "pandas>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agentcore", "databricks_agents", "data", "infrastructure"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
